--- a/Convenience_POS_System/src/main/resources/templates/member/addMemberForm.html
+++ b/Convenience_POS_System/src/main/resources/templates/member/addMemberForm.html
@@ -33,7 +33,7 @@
 
     <div class="container">
         <h4 class="mb-3">회원 정보 입력</h4>
-        <form>
+        <form action="/member/signup" method="post">
             <div class="row mb-3">
                 <label for="inputEmail3" class="col-sm-2 col-form-label">이메일</label>
                 <div class="col-sm-10">
@@ -49,26 +49,26 @@
             <div class="row mb-3">
                 <label for="confirmPassword3" class="col-sm-2 col-form-label">비밀번호 확인</label>
                 <div class="col-sm-10">
-                    <input type="password" class="form-control" id="confirmPassword3" name="password1">
+                    <input type="password" class="form-control" id="confirmPassword3" name="passwordcf">
                 </div>
             </div>
             <div class="row mb-3">
                 <label for="name" class="col-sm-2 col-form-label">이름</label>
                 <div class="col-sm-10">
-                    <input type="password" class="form-control" id="name" name="name">
+                    <input type="text" class="form-control" id="name" name="name">
                 </div>
             </div>
             <fieldset class="row mb-3">
                 <legend class="col-form-label col-sm-2 pt-0">직책(ROLE)</legend>
                 <div class="col-sm-10">
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+                        <input class="form-check-input" type="radio" name="role" id="gridRadios1" value="MANAGER" checked>
                         <label class="form-check-label" for="gridRadios1">
                             매니저
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                        <input class="form-check-input" type="radio" name="role" id="gridRadios2" value="EMPLOYEE">
                         <label class="form-check-label" for="gridRadios2">
                             사원
                         </label>
