--- a/Convenience_POS_System/src/main/resources/templates/member/loginForm.html
+++ b/Convenience_POS_System/src/main/resources/templates/member/loginForm.html
@@ -36,15 +36,15 @@
             <h2>로그인</h2>
         </div>
 
-        <form>
+        <form action="/member/login" method="post">
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                 <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
+                <input type="password" name="password" class="form-control" id="exampleInputPassword1">
             </div>
             <div class="mb-3 form-check">
                 <a href="/member/signup">계정이 없으신가요? 회원가입을 하세요!</a>
