--- a/Convenience_POS_System/src/main/resources/templates/mainpage.html
+++ b/Convenience_POS_System/src/main/resources/templates/mainpage.html
@@ -49,7 +49,12 @@
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"><i class="bi bi-cloud-download"></i></div>
-                                <h2 class="fs-4 fw-bold">재고입고 관리</h2>
+                                <th:block th:if="${session.loginMember eq null}">
+                                    <h2 class="fs-4 fw-bold">재고 입고</h2>
+                                </th:block>
+                                <th:block th:unless="${session.loginMember eq null}">
+                                    <a th:href="@{/product/add}"><h2 class="fs-4 fw-bold">재고 입고</h2></a>
+                                </th:block>
                                 <p class="mb-0">As always, Start Bootstrap has a powerful collectin of free templates.</p>
                             </div>
                         </div>
@@ -67,7 +72,7 @@
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"><i class="bi bi-bootstrap"></i></div>
-                                <h2 class="fs-4 fw-bold">재품 상세 수정</h2>
+                                <h2 class="fs-4 fw-bold">제품 상세 수정</h2>
                                 <p class="mb-0">We've created some custom feature boxes using Bootstrap icons!</p>
                             </div>
                         </div>
