--- a/Convenience_POS_System/src/main/resources/templates/mainpage.html
+++ b/Convenience_POS_System/src/main/resources/templates/mainpage.html
@@ -55,7 +55,7 @@
                                 <th:block th:unless="${session.loginMember eq null}">
                                     <a th:href="@{/product/add}"><h2 class="fs-4 fw-bold">재고 입고</h2></a>
                                 </th:block>
-                                <p class="mb-0">As always, Start Bootstrap has a powerful collectin of free templates.</p>
+                                <p class="mb-0">새로운 제품 입고, 기존에 있는 제품 입고를 할 수 있습니다.</p>
                             </div>
                         </div>
                     </div>
