--- a/Convenience_POS_System/src/main/resources/templates/mainpage.html
+++ b/Convenience_POS_System/src/main/resources/templates/mainpage.html
@@ -63,7 +63,12 @@
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"><i class="bi bi-card-heading"></i></div>
-                                <h2 class="fs-4 fw-bold">재고 현황</h2>
+                                <th:block th:if="${session.loginMember eq null}">
+                                    <h2 class="fs-4 fw-bold">재고 현황</h2>
+                                </th:block>
+                                <th:block th:unless="${session.loginMember eq null}">
+                                    <a th:href="@{/product/list}"><h2 class="fs-4 fw-bold">재고 현황</h2></a>
+                                </th:block>
                                 <p class="mb-0">The heroic part of this template is the jumbotron hero header!</p>
                             </div>
                         </div>
@@ -72,7 +77,12 @@
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"><i class="bi bi-bootstrap"></i></div>
-                                <h2 class="fs-4 fw-bold">제품 상세 수정</h2>
+                                <th:block th:if="${session.loginMember eq null}">
+                                    <h2 class="fs-4 fw-bold">제품 상세 수정</h2>
+                                </th:block>
+                                <th:block th:unless="${session.loginMember eq null}">
+                                    <a th:href="@{/product/update}"><h2 class="fs-4 fw-bold">제품 상세 수정</h2></a>
+                                </th:block>
                                 <p class="mb-0">We've created some custom feature boxes using Bootstrap icons!</p>
                             </div>
                         </div>
