--- a/Convenience_POS_System/src/main/resources/templates/product/addNewProductForm.html
+++ b/Convenience_POS_System/src/main/resources/templates/product/addNewProductForm.html
@@ -36,6 +36,7 @@
 <div class="container">
     <h4 class="mb-3">제품 정보 입력</h4>
     <form action="/product/add/new" method="post">
+        <input type="text" hidden id="sell" name="sell" value="1"/>
         <div class="row mb-3">
             <label for="code" class="col-sm-2 col-form-label">코드</label>
             <div class="col-sm-10">
