--- a/Convenience_POS_System/src/main/resources/templates/product/add.html
+++ b/Convenience_POS_System/src/main/resources/templates/product/add.html
@@ -12,6 +12,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet"/>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/bootstrap/css/styles.css" rel="stylesheet"/>
+    <style>
+        body{
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
 
