--- a/Convenience_POS_System/src/main/resources/templates/fragments/footer.html
+++ b/Convenience_POS_System/src/main/resources/templates/fragments/footer.html
@@ -7,6 +7,15 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="/bootstrap/css/styles.css" rel="stylesheet" />
     </head>
+    <style>
+        footer{
+            width: 100%;
+            height: 300px;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+        }
+    </style>
 </head>
 <body>
 <!-- Footer-->
