--- a/Convenience_POS_System/src/main/resources/templates/member/addMemberForm.html
+++ b/Convenience_POS_System/src/main/resources/templates/member/addMemberForm.html
@@ -3,20 +3,31 @@
 <head>
     <meta charset="utf-8">
     <link th:href="@{/bootstrap/css/bootstrap.min.css}"
-          href="../../../../../../../../../Downloads/mvc2_source_v20210624/mvc2/login/src/main/resources/templates/css/bootstrap.min.css" rel="stylesheet">
+          href="../../../../../../../../../Downloads/mvc2_source_v20210624/mvc2/login/src/main/resources/templates/css/bootstrap.min.css"
+          rel="stylesheet">
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet"/>
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="/bootstrap/css/styles.css" rel="stylesheet" />
+    <link href="/bootstrap/css/styles.css" rel="stylesheet"/>
     <style>
-        body, html{
-            width: 100%;
+        body, html {
+            margin: 0;
+            padding: 0;
             height: 100%;
         }
-        .container {
-            width: 70%;
-            height: 100%;
+
+        #body-wrapper {
+            min-height: 100%;
+            position: relative;
         }
+
+        #content {
+            margin-left: 10%;
+            margin-right: 10%;
+            margin-top: 100px;
+            padding-bottom: 300px;
+        }
+
         .field-error {
             border-color: #dc3545;
             color: #dc3545;
@@ -24,14 +35,17 @@
     </style>
 </head>
 <body>
+
+<div id="body-wrapper">
+
     <!-- Responsive navbar-->
     <th:block th:replace="fragments/navbar :: navbarFragment"></th:block>
+    <div id="content">
 
-    <div class="py-5 text-center">
-        <h2>회원 가입</h2>
-    </div>
+        <div class="py-5 text-center">
+            <h2>회원 가입</h2>
+        </div>
 
-    <div class="container">
         <h4 class="mb-3">회원 정보 입력</h4>
         <form action="/member/signup" method="post">
             <div class="row mb-3">
@@ -62,7 +76,8 @@
                 <legend class="col-form-label col-sm-2 pt-0">직책(ROLE)</legend>
                 <div class="col-sm-10">
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="role" id="gridRadios1" value="MANAGER" checked>
+                        <input class="form-check-input" type="radio" name="role" id="gridRadios1" value="MANAGER"
+                               checked>
                         <label class="form-check-label" for="gridRadios1">
                             매니저
                         </label>
@@ -77,9 +92,12 @@
             </fieldset>
             <button type="submit" class="btn btn-primary">Sign in</button>
         </form>
+
     </div>
     <!-- Footer-->
     <th:block th:replace="fragments/footer :: footerFragment"></th:block>
+</div>
+
 
 </body>
 </html>
