--- a/Convenience_POS_System/src/main/resources/templates/member/memberDetailOther.html
+++ b/Convenience_POS_System/src/main/resources/templates/member/memberDetailOther.html
@@ -13,27 +13,29 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/bootstrap/css/styles.css" rel="stylesheet"/>
     <style>
-        .container {
-            display: flex;
-            justify-content: center;
-        }
-
-        .content {
-            width: 85%;
-        }
-
-        body{
+        body, html{
+            margin: 0;
+            padding: 0;
             height: 100%;
+        }
+        #body-wrapper {
+            min-height: 100%;
+            position: relative;
+        }
+        #content{
+            margin-left: 10%;
+            margin-right: 10%;
+            margin-top: 100px;
+            padding-bottom: 300px;
         }
     </style>
 </head>
 <body>
-<!-- Responsive navbar-->
-<th:block th:replace="fragments/navbar :: navbarFragment"></th:block>
 
-
-<div class="container">
-    <div class="content">
+<div id="body-wrapper">
+    <!-- Responsive navbar-->
+    <th:block th:replace="fragments/navbar :: navbarFragment"></th:block>
+    <div id="content">
         <h1>회원 정보</h1>
         <hr>
         <h5>[[${member.email}]]</h5><br>
@@ -83,12 +85,12 @@
                 <th th:text="${productStateHistory.getDatetime()}"/>
             </tr>
         </table>
-
     </div>
 
+    <!-- Footer-->
+    <th:block th:replace="fragments/footer :: footerFragment"></th:block>
 </div>
-<!-- Footer-->
-<th:block th:replace="fragments/footer :: footerFragment"></th:block>
+
 
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
