--- a/Convenience_POS_System/src/main/resources/templates/product/add.html
+++ b/Convenience_POS_System/src/main/resources/templates/product/add.html
@@ -13,40 +13,57 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/bootstrap/css/styles.css" rel="stylesheet"/>
     <style>
-        body{
+        body, html{
+            margin: 0;
+            padding: 0;
             height: 100%;
+        }
+        #body-wrapper {
+            min-height: 100%;
+            position: relative;
+        }
+        #content{
+            margin-left: 10%;
+            margin-right: 10%;
+            margin-top: 100px;
+            padding-bottom: 300px;
         }
     </style>
 </head>
 <body>
 
-<!-- Responsive navbar-->
-<th:block th:replace="fragments/navbar :: navbarFragment"></th:block>
+<div id="body-wrapper">
+    <!-- Responsive navbar-->
+    <th:block th:replace="fragments/navbar :: navbarFragment"></th:block>
+    <div id="content">
 
-<div>
-    <a href="/product/add/new" class="btn btn-primary btn-lg">새로운 제품 추가하기</a>
-</div>
-<div>
-    <table class="table">
-        <tr>
-            <th>Code</th>
-            <th>제품이름</th>
-            <th>가격</th>
-            <th>수량</th>
-            <th>입고하기</th>
-        </tr>
-        <tr th:each="product : ${products}">
-            <td th:text="${product.getCode()}"></td>
-            <td th:text="${product.getName()}"></td>
-            <td th:text="${product.getPrice()}"></td>
-            <td th:text="${product.getQuantity()}"></td>
-            <td><a th:href="@{/product/add/{productId}(productId=${product.getId()})}" th:text="추가하기">추가하기</a></td>
-        </tr>
-    </table>
+        <div>
+            <a href="/product/add/new" class="btn btn-primary btn-lg">새로운 제품 추가하기</a>
+        </div>
+        <div>
+            <table class="table">
+                <tr>
+                    <th>Code</th>
+                    <th>제품이름</th>
+                    <th>가격</th>
+                    <th>수량</th>
+                    <th>입고하기</th>
+                </tr>
+                <tr th:each="product : ${products}">
+                    <td th:text="${product.getCode()}"></td>
+                    <td th:text="${product.getName()}"></td>
+                    <td th:text="${product.getPrice()}"></td>
+                    <td th:text="${product.getQuantity()}"></td>
+                    <td><a th:href="@{/product/add/{productId}(productId=${product.getId()})}" th:text="추가하기">추가하기</a></td>
+                </tr>
+            </table>
+        </div>
+    </div>
+    <!-- Footer-->
+    <th:block th:replace="fragments/footer :: footerFragment"></th:block>
+
 </div>
 
-<!-- Footer-->
-<th:block th:replace="fragments/footer :: footerFragment"></th:block>
 
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
