--- a/Convenience_POS_System/src/main/resources/templates/product/productUpdateDetail.html
+++ b/Convenience_POS_System/src/main/resources/templates/product/productUpdateDetail.html
@@ -12,40 +12,65 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet"/>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/bootstrap/css/styles.css" rel="stylesheet"/>
+    <style>
+        body, html{
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+        #body-wrapper {
+            min-height: 100%;
+            position: relative;
+        }
+        #content{
+            margin-left: 10%;
+            margin-right: 10%;
+            margin-top: 100px;
+            padding-bottom: 300px;
+        }
+    </style>
 </head>
 <body>
 
-<!-- Responsive navbar-->
-<th:block th:replace="fragments/navbar :: navbarFragment"></th:block>
+<div id="body-wrapper">
+    <!-- Responsive navbar-->
+    <th:block th:replace="fragments/navbar :: navbarFragment"></th:block>
+    <div id="content">
 
+        <div>
+            <table class="table">
+                <tr>
+                    <th>처리직원ID</th>
+                    <th>기존이름</th>
+                    <th>새이름</th>
+                    <th>기존가격</th>
+                    <th>새가격</th>
+                    <th>상태</th>
+                    <th>날짜</th>
+                </tr>
+                <tr th:each="detailUpdate : ${detailUpdates}">
+                    <td th:text="${detailUpdate.getMid()}"></td>
 
-<div>
-    <table class="table">
-        <tr>
-            <th>처리직원ID</th>
-            <th>기존이름</th>
-            <th>새이름</th>
-            <th>기존가격</th>
-            <th>새가격</th>
-            <th>상태</th>
-            <th>날짜</th>
-        </tr>
-        <tr th:each="detailUpdate : ${detailUpdates}">
-            <td th:text="${detailUpdate.getMid()}"></td>
+                    <td th:text="${detailUpdate.getName()}"></td>
+                    <td th:text="${detailUpdate.getNewname()}"></td>
+                    <td th:text="${detailUpdate.getPrice()}"></td>
+                    <td th:text="${detailUpdate.getNewprice()}"></td>
 
-            <td th:text="${detailUpdate.getName()}"></td>
-            <td th:text="${detailUpdate.getNewname()}"></td>
-            <td th:text="${detailUpdate.getPrice()}"></td>
-            <td th:text="${detailUpdate.getNewprice()}"></td>
+                    <td th:text="${detailUpdate.getState()}"></td>
+                    <td th:text="${detailUpdate.getDatetime()}"></td>
+                </tr>
+            </table>
+        </div>
+    </div>
 
-            <td th:text="${detailUpdate.getState()}"></td>
-            <td th:text="${detailUpdate.getDatetime()}"></td>
-        </tr>
-    </table>
+    <!-- Footer-->
+    <th:block th:replace="fragments/footer :: footerFragment"></th:block>
 </div>
 
-<!-- Footer-->
-<th:block th:replace="fragments/footer :: footerFragment"></th:block>
+
+
+
+
 
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
