--- a/Convenience_POS_System/src/main/resources/templates/product/updateList.html
+++ b/Convenience_POS_System/src/main/resources/templates/product/updateList.html
@@ -12,46 +12,71 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet"/>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/bootstrap/css/styles.css" rel="stylesheet"/>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+
+        #body-wrapper {
+            min-height: 100%;
+            position: relative;
+        }
+
+        #content {
+            margin-left: 10%;
+            margin-right: 10%;
+            margin-top: 100px;
+            padding-bottom: 300px;
+        }
+    </style>
 </head>
 <body>
 
-<!-- Responsive navbar-->
-<th:block th:replace="fragments/navbar :: navbarFragment"></th:block>
+<div id="body-wrapper">
+    <!-- Responsive navbar-->
+    <th:block th:replace="fragments/navbar :: navbarFragment"></th:block>
 
+    <div id="content">
 
-<div>
-    <table class="table">
-        <tr>
-            <th>Code</th>
-            <th>제품이름</th>
-            <th>가격</th>
-            <th>수정하기</th>
-            <th>수정이력</th>
-            <th>판매상태</th>
-            <th>판매상태수정</th>
-        </tr>
-        <tr th:each="product : ${products}">
-            <td th:text="${product.getCode()}"></td>
-            <td th:text="${product.getName()}"></td>
-            <td th:text="${product.getPrice()}"></td>
-            <td><a th:href="@{/product/update/{productId}(productId=${product.getId()})}" th:text="수정하기">수정하기</a></td>
-            <td><a th:href="@{/product/update/detail/{productId}(productId=${product.getId()})}" th:text="수정이력">수정이력</a></td>
-            <td>
-                <th:block th:if="${product.getSell() eq 1}" th:text="판매중"/>
-                <th:block th:if="${product.getSell() eq 0}" th:text="판매중지" />
-            </td>
-            <td>
-                <form method="post" th:action="@{/product/update/state/{productId}(productId=${product.getId()})}">
-                    <button th:if="${product.getSell() eq 1}" th:text="판매중지하기"></button>
-                    <button th:if="${product.getSell() eq 0}" th:text="판매재개하기"></button>
-                </form>
-            </td>
-        </tr>
-    </table>
+        <table class="table">
+            <tr>
+                <th>Code</th>
+                <th>제품이름</th>
+                <th>가격</th>
+                <th>수정하기</th>
+                <th>수정이력</th>
+                <th>판매상태</th>
+                <th>판매상태수정</th>
+            </tr>
+            <tr th:each="product : ${products}">
+                <td th:text="${product.getCode()}"></td>
+                <td th:text="${product.getName()}"></td>
+                <td th:text="${product.getPrice()}"></td>
+                <td><a th:href="@{/product/update/{productId}(productId=${product.getId()})}" th:text="수정하기">수정하기</a>
+                </td>
+                <td><a th:href="@{/product/update/detail/{productId}(productId=${product.getId()})}"
+                       th:text="수정이력">수정이력</a></td>
+                <td>
+                    <th:block th:if="${product.getSell() eq 1}" th:text="판매중"/>
+                    <th:block th:if="${product.getSell() eq 0}" th:text="판매중지"/>
+                </td>
+                <td>
+                    <form method="post" th:action="@{/product/update/state/{productId}(productId=${product.getId()})}">
+                        <button th:if="${product.getSell() eq 1}" th:text="판매중지하기"></button>
+                        <button th:if="${product.getSell() eq 0}" th:text="판매재개하기"></button>
+                    </form>
+                </td>
+            </tr>
+        </table>
+
+    </div>
+
+    <!-- Footer-->
+    <th:block th:replace="fragments/footer :: footerFragment"></th:block>
 </div>
 
-<!-- Footer-->
-<th:block th:replace="fragments/footer :: footerFragment"></th:block>
 
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
