--- a/Convenience_POS_System/src/main/resources/templates/product/updateProductForm.html
+++ b/Convenience_POS_System/src/main/resources/templates/product/updateProductForm.html
@@ -13,56 +13,69 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/bootstrap/css/styles.css" rel="stylesheet"/>
     <style>
-        body, html {
-            width: 100%;
+        body, html{
+            margin: 0;
+            padding: 0;
             height: 100%;
         }
-
-        .container {
-            width: 70%;
-            height: 100%;
+        #body-wrapper {
+            min-height: 100%;
+            position: relative;
+        }
+        #content{
+            margin-left: 10%;
+            margin-right: 10%;
+            margin-top: 100px;
+            padding-bottom: 300px;
         }
     </style>
 </head>
 <body>
 
-<!-- Responsive navbar-->
-<th:block th:replace="fragments/navbar :: navbarFragment"></th:block>
+<div id="body-wrapper">
+    <!-- Responsive navbar-->
+    <th:block th:replace="fragments/navbar :: navbarFragment"></th:block>
+    <div id="content">
 
-<div class="py-5 text-center">
-    <h2>새로운 제품 입고</h2>
+        <div class="py-5 text-center">
+            <h2>새로운 제품 입고</h2>
+        </div>
+
+        <div class="container">
+            <h4 class="mb-3">제품 정보 입력</h4>
+            <form action="/product/update/" method="post">
+                <input type="text" class="form-control" id="sell" name="sell" readonly hidden th:value="${product.getSell()}">
+                <input type="text" class="form-control" id="id" name="id" readonly hidden th:value="${product.getId()}">
+                <input type="text" class="form-control" id="quantity" name="quantity" readonly hidden th:value="${product.getQuantity()}">
+                <div class="row mb-3">
+                    <label for="code" class="col-sm-2 col-form-label">코드</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="code" name="code" readonly th:value="${product.getCode()}">
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <label for="name" class="col-sm-2 col-form-label">제품명</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="name" name="name" th:value="${product.getName()}">
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <label for="price" class="col-sm-2 col-form-label">가격</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="price" name="price" th:value="${product.getPrice()}">
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary">제품 수정</button>
+            </form>
+        </div>
+
+    </div>
+
+    <!-- Footer-->
+    <th:block th:replace="fragments/footer :: footerFragment"></th:block>
 </div>
 
-<div class="container">
-    <h4 class="mb-3">제품 정보 입력</h4>
-    <form action="/product/update/" method="post">
-        <input type="text" class="form-control" id="sell" name="sell" readonly hidden th:value="${product.getSell()}">
-        <input type="text" class="form-control" id="id" name="id" readonly hidden th:value="${product.getId()}">
-        <input type="text" class="form-control" id="quantity" name="quantity" readonly hidden th:value="${product.getQuantity()}">
-        <div class="row mb-3">
-            <label for="code" class="col-sm-2 col-form-label">코드</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="code" name="code" readonly th:value="${product.getCode()}">
-            </div>
-        </div>
-        <div class="row mb-3">
-            <label for="name" class="col-sm-2 col-form-label">제품명</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="name" name="name" th:value="${product.getName()}">
-            </div>
-        </div>
-        <div class="row mb-3">
-            <label for="price" class="col-sm-2 col-form-label">가격</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="price" name="price" th:value="${product.getPrice()}">
-            </div>
-        </div>
-        <button type="submit" class="btn btn-primary">제품 수정</button>
-    </form>
-</div>
 
-<!-- Footer-->
-<th:block th:replace="fragments/footer :: footerFragment"></th:block>
 
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
