--- a/Convenience_POS_System/src/main/resources/templates/mainpage.html
+++ b/Convenience_POS_System/src/main/resources/templates/mainpage.html
@@ -96,7 +96,12 @@
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"><i class="bi bi-code"></i></div>
-                                <h2 class="fs-4 fw-bold">판매 통계</h2>
+                                <th:block th:if="${session.loginMember eq null}">
+                                    <h2 class="fs-4 fw-bold">판매 통계</h2>
+                                </th:block>
+                                <th:block th:unless="${session.loginMember eq null}">
+                                    <a th:href="@{/statistics}"><h2 class="fs-4 fw-bold">판매 통계</h2></a>
+                                </th:block>
                                 <p class="mb-0">We keep our dependencies up to date and squash bugs as they come!</p>
                             </div>
                         </div>
